# rpn-calculator

./: .gitignore  CMakeLists.txt  Dockerfile  Doxyfile
.github/workflows/: ci.yml
include/: rpn.h
src/: main.cpp  rpn.cpp
tests/: CMakeLists.txt  test_rpn.cpp
